--- a/src/scss/components/_flip_card.scss
+++ b/src/scss/components/_flip_card.scss
@@ -100,6 +100,6 @@
     pointer-events: auto;
 
     position: absolute;
-    transform: translate(var(--dx), var(--dy));
+    transform: translate(calc(-50% + var(--dx)), calc(-50% + var(--dy)));
   }
 }
